@@ -14,7 +14,7 @@ Build-Depends: libacl1-dev, libgpmg1-dev [linux-any], autoconf,
  libgtk2.0-dev, libgtk-3-dev, libxaw7-dev, libxt-dev, libxpm-dev, libgnomeui-dev,
 # B-D for language interpreters
 # Update d/rules when ruby version changes
- libperl-dev, tcl-dev, python-dev, ruby, ruby-dev, lua5.2, liblua5.2-dev
+ libperl-dev, tcl-dev, python3-dev, ruby, ruby-dev, lua5.2, liblua5.2-dev
 # ruby1.8{,-dev} Provides: ruby{,-dev} which can cause breakage on buildds if
 # ruby/ruby1.8-dev or ruby1.8/ruby-dev pairs get installed due to a mismatch in
 # the ruby binary version and the library version
